--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <br> <br>
 <center>
-<img src="yo.jpg" alt="Ese soy yo"  heigth = "280" width = "340">
+<img src="yo" alt="Ese soy yo"  heigth = "280" width = "340">
 </center>
 <hr size ="15" noshade ><br>
 <i> HOJA DE VIDA </i><br>
