--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <br> <br>
 <center>
-<img src="imagenes/Helen.jpg"  alt="Esta soy yo" height="280" width="340">
+  <img src="Helen.jpg" alt="Esta en mi foto" width="200" height="200">
 </center>
 <hr size ="15" noshade ><br>
 <i> HOJA DE VIDA </i><br>
