--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <i> HOJA DE VIDA </i><br>
 <b><i><font color="Teal"> Datos personales: </font></i></b> <br>
 <b> Nombre: </b>
-Helen Esmeralda Carrillo López <br>
+Helen Esmeralda <br>
+  <b> Apellidos: </b>
+  Carrillo López <br>
 <b> Fecha de nacimiento: </b>
 26 de enero del 2008 <br>
 <b> Edad: </b>
