--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <br> <br>
 <center>
-  <img src="yo.jpg" alt="Esta es mi foto" width="200" height="200">
+  <img src="C:\Users\Kevin Carrilo\proyechv\imagenes\yo.jpg" alt="Esta es mi foto" width="200" height="200">
 </center>
 <hr size ="10" noshade ><br>
 <i> HOJA DE VIDA </i><br>
