--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
 <body>
 <br> <br>
 <center>
-  <img src="C:\Users\Kevin Carrilo\proyechv\imagenes\yo.jpg" alt="Esta es mi foto" width="200" height="200">
+<img src="C:\Users\Kevin Carrilo\ProyectHV\imagenes\Yop.jpg" alt="Ese soy yo"  heigth = "200" width = "240">
 </center>
-<hr size ="10" noshade ><br>
+<hr size ="20" noshade ><br>
 <i> HOJA DE VIDA </i><br>
-<b><i><font color="Teal"> Datos personales: </font></i></b> <br>
+<b><i><font color="violet"> Datos personales: </font></i></b> <br>
 <b> Nombre: </b>
-Helen Esmeralda <br>
-  <b> Apellidos: </b>
-  Carrillo López <br>
+Helen Esmeralda Carrillo López <br>
 <b> Fecha de nacimiento: </b>
 26 de enero del 2008 <br>
 <b> Edad: </b>
@@ -22,11 +20,45 @@ Helen Esmeralda <br>
 5567-9503 <br>
 <b> Correo Electronico: </b>
 helencarrillo6636@gmail.com <br>
-<b><i><font color="Teal"> Datos Escolares: </font></i></b> <br>
+<hr size ="10" noshade ><br>
+<b><i><font color="violet"> Datos Escolares: </font></i></b> <br>
 <b>Parvulos:</b>Escuela Oficial de Parvulos JM Linda Vista <br>
 <b>Primaria:</b> Colegio Guate Ámala <br>
 <b>Basico:</b> Colegio Liceo Lideres del Futuro <br>
 <b>Diversificado:</b> Instituto Profesional de Computación <br>
+<hr size ="10" noshade ><br>
+<b><i><font color="violet"> Otros: </font></i></b> <br>
+Ver series o peliculas <br>
+Jugar <br>
+Escuchar musica <br>
+<hr size ="10" noshade ><br>
+<b><i><font color="violet"> Opiniones de mis compañer@s: </font></i></b> <br>
+<table border="3">
+	<tr>
+		<th> <b><i><font color="violet"> Mariana: </font></i></b> <br>
+		Lo que pienso de<br>
+		usted es que usted <br>
+		es una persona amable,<br>
+		divertida, carismática y <br>
+		inteligente es una persona<br>
+		que sabe pensar en las peores<br>
+		ocasiones y siempre tener un <br>
+		lado positivo de las cosas es <br>
+		amable y soñadora.
+		<th> <b><i><font color="violet"> Esther: </font></i></b> <br> 
+		Es una persona inteligente,<br>
+		acomedida, solidaria, leal,<br>
+		activa, honesta
+		<th> <b><i><font color="violet"> Ashley: </font></i></b> <br>
+		<th> <b><i><font color="violet"> Monica: </font></i></b> <br>
+	</tr>
+	<tr>
+		<td><img src="C:\Users\Kevin Carrilo\ProyectHV\imagenes\Mariana.jpg" heigth = "70" width = "90" /></td>
+ 		<td><img src="C:\Users\Kevin Carrilo\ProyectHV\imagenes\Esther.jpg" heigth = "130" width = "170" /></td>
+		<td><img src="C:\Users\Kevin Carrilo\ProyectHV\imagenes\Mariana.jpg" heigth = "50" width = "90" /></td>
+		<td><img src="C:\Users\Kevin Carrilo\ProyectHV\imagenes\Monica.jpg" heigth = "70" width = "100" /></td>
+	</tr>
+</table>
 <hr size ="20" noshade ><br>
 </body>
 </html>
