--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <br> <br>
 <center>
-<img src="C:\Users\Kevin Carrilo\ProyectHV\imagenes\Yop.jpg" alt="Ese soy yo"  heigth = "200" width = "240">
+<img src="Yop.jpg" alt="Ese soy yo"  heigth = "200" width = "240">
 </center>
 <hr size ="20" noshade ><br>
 <i> HOJA DE VIDA </i><br>
@@ -53,10 +53,10 @@ Escuchar musica <br>
 		<th> <b><i><font color="violet"> Monica: </font></i></b> <br>
 	</tr>
 	<tr>
-		<td><img src="C:\Users\Kevin Carrilo\ProyectHV\imagenes\Mariana.jpg" heigth = "70" width = "90" /></td>
- 		<td><img src="C:\Users\Kevin Carrilo\ProyectHV\imagenes\Esther.jpg" heigth = "130" width = "170" /></td>
-		<td><img src="C:\Users\Kevin Carrilo\ProyectHV\imagenes\Mariana.jpg" heigth = "50" width = "90" /></td>
-		<td><img src="C:\Users\Kevin Carrilo\ProyectHV\imagenes\Monica.jpg" heigth = "70" width = "100" /></td>
+		<td><img src="Mariana.jpg" heigth = "70" width = "90" /></td>
+ 		<td><img src="Esther.jpg" heigth = "130" width = "170" /></td>
+		<td><img src="Ashley.jpg" heigth = "50" width = "90" /></td>
+		<td><img src="Monica.jpg" heigth = "70" width = "100" /></td>
 	</tr>
 </table>
 <hr size ="20" noshade ><br>
