--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@ Escuchar musica <br>
 		acomedida, solidaria, leal,<br>
 		activa, honesta
 		<th> <b><i><font color="violet"> Ashley: </font></i></b> <br>
+			Que eres una persona muy <br>
+			inteligente y brillante
 		<th> <b><i><font color="violet"> Monica: </font></i></b> <br>
+			Para mi eres muy inteligente por<br>
+			que le entiendes a cosas que yo <br>
+			no le entiendo y eres muy dulce.
 	</tr>
 	<tr>
 		<td><img src="Mariana.jpg" heigth = "70" width = "90" /></td>
