--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <br> <br>
 <center>
-<img src="C:\Users\Kevin Carrilo\ProyectHV\imagenes\Yop.jpg" heigth = "200" width = "240">
+<img src="images/Yop.jpg" heigth = "200" width = "240">
 </center>
 <hr size ="20" noshade ><br>
 <i> HOJA DE VIDA </i><br>
