--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Escuchar musica <br>
 	<tr>
 		<td><img src="Mariana.jpg" heigth = "70" width = "90" /></td>
  		<td><img src="Esther.jpg" heigth = "130" width = "170" /></td>
-		<td><img src="C:\Users\Kevin Carrilo\ProyectHV\imagenes" heigth = "50" width = "90" /></td>
+		<td><img src="imagenes/Ashley.jpg" heigth = "50" width = "90" /></td>
 		<td><img src="Monica.jpg" heigth = "70" width = "100" /></td>
 	</tr>
 </table>
