--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <br> <br>
 <center>
-<img src="images/Yop.jpg" heigth = "200" width = "240">
+<img src="Yop.jpg" heigth = "200" width = "240">
 </center>
 <hr size ="20" noshade ><br>
 <i> HOJA DE VIDA </i><br>
@@ -58,10 +58,10 @@ Escuchar musica <br>
 			no le entiendo y eres muy dulce.
 	</tr>
 	<tr>
-		<td><img src="Mariana.jpg" heigth = "70" width = "90" /></td>
+		<td><img src="Mariana.jpg" heigth = "80" width = "100" /></td>
  		<td><img src="Esther.jpg" heigth = "130" width = "170" /></td>
-		<td><img src="imagenes/Ashley.jpg" heigth = "50" width = "90" /></td>
-		<td><img src="Monica.jpg" heigth = "70" width = "100" /></td>
+		<td><img src="Ashley.jpg" heigth = "70" width = "110" /></td>
+		<td><img src="Monica.jpg" heigth = "90" width = "120" /></td>
 	</tr>
 </table>
 <hr size ="20" noshade ><br>
