--- a/index.html
+++ b/index.html
@@ -1,69 +1,111 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
-<title> hoja de vida </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curriculum</title>
+    <style>
+        body {
+            background-image: url('fondo.jpg'); /* Ruta de la imagen de fondo */
+            background-size: cover; /* La imagen cubre toda la pantalla */
+            background-position: center; /* Centra la imagen */
+        }
+        #menu {
+            margin-top: 20px;
+        }
+        h1, h2 {
+            color: magenta;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 3px solid black;
+        }
+        th, td {
+            padding: 10px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-<br> <br>
-<center>
-<img src="Yop.jpg" heigth = "200" width = "240">
-</center>
-<hr size ="20" noshade ><br>
-<i> HOJA DE VIDA </i><br>
-<b><i><font color="violet"> Datos personales: </font></i></b> <br>
-<b> Nombre: </b>
-Helen Esmeralda Carrillo López <br>
-<b> Fecha de nacimiento: </b>
-26 de enero del 2008 <br>
-<b> Edad: </b>
-17 años <br>
-<b> Telefono: </b>
-5567-9503 <br>
-<b> Correo Electronico: </b>
-helencarrillo6636@gmail.com <br>
-<hr size ="10" noshade ><br>
-<b><i><font color="violet"> Datos Escolares: </font></i></b> <br>
-<b>Parvulos:</b>Escuela Oficial de Parvulos JM Linda Vista <br>
-<b>Primaria:</b> Colegio Guate Ámala <br>
-<b>Basico:</b> Colegio Liceo Lideres del Futuro <br>
-<b>Diversificado:</b> Instituto Profesional de Computación <br>
-<hr size ="10" noshade ><br>
-<b><i><font color="violet"> Otros: </font></i></b> <br>
-Ver series o peliculas <br>
-Jugar <br>
-Escuchar musica <br>
-<hr size ="10" noshade ><br>
-<b><i><font color="violet"> Opiniones de mis compañer@s: </font></i></b> <br>
-<table border="3">
-	<tr>
-		<th> <b><i><font color="violet"> Mariana: </font></i></b> <br>
-		Lo que pienso de<br>
-		usted es que usted <br>
-		es una persona amable,<br>
-		divertida, carismática y <br>
-		inteligente es una persona<br>
-		que sabe pensar en las peores<br>
-		ocasiones y siempre tener un <br>
-		lado positivo de las cosas es <br>
-		amable y soñadora.
-		<th> <b><i><font color="violet"> Esther: </font></i></b> <br> 
-		Es una persona inteligente,<br>
-		acomedida, solidaria, leal,<br>
-		activa, honesta
-		<th> <b><i><font color="violet"> Ashley: </font></i></b> <br>
-			Que eres una persona muy <br>
-			inteligente y brillante
-		<th> <b><i><font color="violet"> Monica: </font></i></b> <br>
-			Para mi eres muy inteligente por<br>
-			que le entiendes a cosas que yo <br>
-			no le entiendo y eres muy dulce.
-	</tr>
-	<tr>
-		<td><img src="Mariana.jpg" heigth = "80" width = "100" /></td>
- 		<td><img src="Esther.jpg" heigth = "130" width = "170" /></td>
-		<td><img src="Ashley.jpg" heigth = "70" width = "110" /></td>
-		<td><img src="Monica.jpg" heigth = "90" width = "120" /></td>
-	</tr>
-</table>
-<hr size ="20" noshade ><br>
+    <center>
+    <img src="Yop.jpg" height="160" width="150" />
+    </center>
+    <div id="menu">
+        <h2>Hoja de Vida</h2>
+
+        <a href="#persona">Datos personales</a><br>
+        <a href="#estudios">Datos académicos</a><br>
+        <a href="#labor">Datos laborales</a><br>
+        <a href="#otros">Otros</a><br>
+        <hr size="25" noshade><br>
+    </div>
+
+    <h1>Curriculum</h1>
+
+    <a id="persona">
+        <h2>Datos personales</h2>
+    </a>
+    <p><font color="magenta">Nombre:</font> Helen Esmeralda</p>
+    <p><font color="magenta">Apellido:</font> Carrillo Lopez</p>
+    <p><font color="magenta">Correo electrónico:</font> helencarrillo6636@gmail.com</p>
+    <p><font color="magenta">Fecha de Nacimiento:</font> 26 de Enero del 2008</p>
+    <hr size="25" noshade><br>
+
+    <a id="estudios">
+        <h2>Datos académicos</h2>
+    </a>
+    <p><font color="magenta">Preparatoria:</font> Escuela oficial rural de párvulos Linda Vista J.M</p>
+    <p><font color="magenta">Primaria:</font> Colegio GuateAmala</p>
+    <p><font color="magenta">Básicos:</font> Colegio Liceo Líderes del Futuro</p>
+    <p><font color="magenta">Diversificado:</font> Instituto Profesional de Computación</p>
+    <hr size="25" noshade><br>
+
+    <a id="labor">
+        <h2>Datos laborales</h2>
+    </a><br>
+    <p>No tengo</p>
+    <hr size="25" noshade><br>
+
+    <a id="otros">
+        <h2>Otros</h2>
+    </a>
+    <i><font color="magenta">Referencias</font></i>
+
+    <table border="3">
+        <tr>
+            <th> <b><i><font color="violet"> Mariana: </font></i></b> <br>
+            Lo que pienso de<br>
+            usted es que usted <br>
+            es una persona amable,<br>
+            divertida, carismática y <br>
+            inteligente es una persona<br>
+            que sabe pensar en las peores<br>
+            ocasiones y siempre tener un <br>
+            lado positivo de las cosas es <br>
+            amable y soñadora.
+            <th> <b><i><font color="violet"> Esther: </font></i></b> <br> 
+            Es una persona inteligente,<br>
+            acomedida, solidaria, leal,<br>
+            activa, honesta
+            <th> <b><i><font color="violet"> Ashley: </font></i></b> <br>
+                Que eres una persona muy <br>
+                inteligente y brillante
+            <th> <b><i><font color="violet"> Monica: </font></i></b> <br>
+                Para mi eres muy inteligente por<br>
+                que le entiendes a cosas que yo <br>
+                no le entiendo y eres muy dulce.
+        </tr>
+        <tr>
+            <td><img src="Mariana.jpg" heigth = "80" width = "100" /></td>
+             <td><img src="Esther.jpg" heigth = "200" width = "230" /></td>
+            <td><img src="Ashley.jpg" heigth = "230" width = "260" /></td>
+            <td><img src="Monica.jpg" heigth = "150" width = "200" /></td>
+        </tr>
+    </table>
+
+    <hr size="20" noshade><br>
 </body>
 </html>
