--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum</title>
     <style>
-        body {
-            background-image: url('fondo.jpg'); /* Ruta de la imagen de fondo */
-            background-size: cover; /* La imagen cubre toda la pantalla */
-            background-position: center; /* Centra la imagen */
-        }
+        body {body {
+    background-image: url(fondo.jpg);
+    background-size: cover;
+    background-position: center;
+}
         #menu {
             margin-top: 20px;
         }
