--- a/index.html
+++ b/index.html
@@ -4,108 +4,122 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum</title>
-    <style>
-        body {body {
-    background-image: url(fondo.jpg);
-    background-size: cover;
-    background-position: center;
-}
-        #menu {
-            margin-top: 20px;
-        }
-        h1, h2 {
-            color: magenta;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        table, th, td {
-            border: 3px solid black;
-        }
-        th, td {
-            padding: 10px;
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
-    <center>
-    <img src="Yop.jpg" height="160" width="150" />
-    </center>
-    <div id="menu">
-        <h2>Hoja de Vida</h2>
-
-        <a href="#persona">Datos personales</a><br>
-        <a href="#estudios">Datos académicos</a><br>
-        <a href="#labor">Datos laborales</a><br>
-        <a href="#otros">Otros</a><br>
-        <hr size="25" noshade><br>
-    </div>
-
-    <h1>Curriculum</h1>
-
+    </head>
+<body bgcolor="Pink">
+    <hr size="10">
+    <center><img src="Yop.jpg" alt="imagen" height="190" width="140"></center>
+    <hr size="10">
+    <h1 id="localSEO">Hoja de vida </h1>
+    <h1 id="menu">Menu</h1>
+    <br>
+    <a href="#persona">
+        <img src="persona.jpg" alt="imagen" height="60" width="60"> Datos personales 
+    </a> <br>
+    <a href="#estudio">
+        <img src="estudios.jpg" alt="imagen" height="60" width="60"> Estudios
+    </a> <br>
+    <a href="#labor">
+        <img src="labores.jpg" alt="imagen" height="60" width="60"> Labores
+    </a> <br>
+    <a href="#otros">
+        <img src="otros.jpg" alt="imagen" height="60" width="60"> Otros
+    </a> <br>
+    <a href="#referencias">
+        <img src="referencias.jpg" alt="imagen" height="60" width="60"> Referencias
+    </a> <br>
+    <hr size="10">
     <a id="persona">
-        <h2>Datos personales</h2>
+        <h1>Datos personales</h1>
     </a>
-    <p><font color="magenta">Nombre:</font> Helen Esmeralda</p>
-    <p><font color="magenta">Apellido:</font> Carrillo Lopez</p>
-    <p><font color="magenta">Correo electrónico:</font> helencarrillo6636@gmail.com</p>
-    <p><font color="magenta">Fecha de Nacimiento:</font> 26 de Enero del 2008</p>
-    <hr size="25" noshade><br>
-
-    <a id="estudios">
-        <h2>Datos académicos</h2>
-    </a>
-    <p><font color="magenta">Preparatoria:</font> Escuela oficial rural de párvulos Linda Vista J.M</p>
-    <p><font color="magenta">Primaria:</font> Colegio GuateAmala</p>
-    <p><font color="magenta">Básicos:</font> Colegio Liceo Líderes del Futuro</p>
-    <p><font color="magenta">Diversificado:</font> Instituto Profesional de Computación</p>
-    <hr size="25" noshade><br>
-
-    <a id="labor">
-        <h2>Datos laborales</h2>
-    </a><br>
-    <p>No tengo</p>
-    <hr size="25" noshade><br>
-
-    <a id="otros">
-        <h2>Otros</h2>
-    </a>
-    <i><font color="magenta">Referencias</font></i>
-
-    <table border="3">
-        <tr>
-            <th> <b><i><font color="violet"> Mariana: </font></i></b> <br>
-            Lo que pienso de<br>
-            usted es que usted <br>
-            es una persona amable,<br>
-            divertida, carismática y <br>
-            inteligente es una persona<br>
-            que sabe pensar en las peores<br>
-            ocasiones y siempre tener un <br>
-            lado positivo de las cosas es <br>
-            amable y soñadora.
-            <th> <b><i><font color="violet"> Esther: </font></i></b> <br> 
-            Es una persona inteligente,<br>
-            acomedida, solidaria, leal,<br>
-            activa, honesta
-            <th> <b><i><font color="violet"> Ashley: </font></i></b> <br>
-                Que eres una persona muy <br>
-                inteligente y brillante
-            <th> <b><i><font color="violet"> Monica: </font></i></b> <br>
-                Para mi eres muy inteligente por<br>
-                que le entiendes a cosas que yo <br>
-                no le entiendo y eres muy dulce.
-        </tr>
-        <tr>
-            <td><img src="Mariana.jpg" heigth = "80" width = "100" /></td>
-             <td><img src="Esther.jpg" heigth = "200" width = "230" /></td>
-            <td><img src="Ashley.jpg" heigth = "230" width = "260" /></td>
-            <td><img src="Monica.jpg" heigth = "150" width = "200" /></td>
-        </tr>
-    </table>
-
-    <hr size="20" noshade><br>
+    <b><i>Nombre:</i></b>
+    Helen Esmeralda <br>
+    <b><i>Apellido:</i></b>
+    Carrillo López <br>
+    <b><i>Grado:</i></b>
+    5to bachillerato en ciencias y letras con orientacion en computacion<br>
+    <b><i>Nacionalidad</i></b>
+    Guatemalteca <br>
+    <b><i>Fecha de Naciemiento</i></b>
+    26 de Enero del 2008 <br>
+    <b><i>Correo Electronico</i></b>
+    helencarrillo6636@gmail.com <br>
+    <a href="#menu">
+    <img src="menu.jpg"alt="imagen" height="30" width="30"> Menu
+</a> <br>
+<hr size="10">
+<a id="estudio">
+    <h1>Estudios</h1>
+</a>
+<b><i><font color="purple"> Prepa:</font></i></b>
+Escuela Oficial Rural Mixta J.M Linda Vista <br>
+<b><i><font color="purple"> Primaria:</font></i></b>
+Colegio GuateAmala Linda Vista <br>
+<b><i><font color="purple"> Basicos:</font></i></b>
+Colegio Liceo Lideres del Futuro Linda Vista <br>
+<b><i><font color="purple"> Diversificado:</font></i></b>
+Instituto Profesional de computacion Villa Nueva<br>
+<a href="#menu">
+    <img src="menu.jpg"alt="imagen" height="30" width="30"> Menu
+</a> <br>
+<hr size="10">
+<a id="labor">
+    <h1>Datos Laborales</h1>
+</a>
+No he tenido <br>
+<a href="#menu">
+    <img src="menu.jpg"alt="imagen" height="30" width="30"> Menu
+</a><br>
+<hr size="10">
+<a id="otros">
+    <h1>Otros</h1>
+</a>
+<u><b><i><font color="perple"> Cursos:</font></i></b></u>
+<h3><b><i>Cursos:</i></b>
+</h3>
+Marca Personal (Platzi) <br>
+Java Script (curso San Carlos) <br>
+Computo basico (Capacitate para el empleo) <br>
+<a href="#menu">
+    <img src="menu.jpg"alt="imagen" height="30" width="30"> Menu
+</a><br>
+<hr size="10">
+<a id="referencias">
+    <h1> Referencias Personales</h1>
+</a>
+<table border="3">
+    <tr>
+        <th> <b><i><font color="violet"> Monica: </font></i></b> <br>
+            Para mi eres muy inteligente por<br>
+            que le entiendes a cosas que yo <br>
+            no le entiendo y eres muy dulce.
+        <th> <b><i><font color="violet"> Mariana: </font></i></b> <br>
+        Lo que pienso de<br>
+        usted es que usted <br>
+        es una persona amable,<br>
+        divertida, carismática y <br>
+        inteligente es una persona<br>
+        que sabe pensar en las peores<br>
+        ocasiones y siempre tener un <br>
+        lado positivo de las cosas es <br>
+        amable y soñadora.
+        <th> <b><i><font color="violet"> Esther: </font></i></b> <br> 
+        Es una persona inteligente,<br>
+        acomedida, solidaria, leal,<br>
+        activa, honesta
+        <th> <b><i><font color="violet"> Ashley: </font></i></b> <br>
+            Que eres una persona muy <br>
+            inteligente y brillante
+    </tr>
+    <tr>
+        <td><img src="Monica.jpg" heigth = "150" width = "200" /></td>
+        <td><img src="Mariana.jpg" heigth = "80" width = "100" /></td>
+         <td><img src="Esther.jpg" heigth = "200" width = "230" /></td>
+        <td><img src="Ashley.jpg" heigth = "230" width = "260" /></td>
+    </tr>
+</table>
+<a href="#menu">
+    <img src="menu.jpg"alt="imagen" height="30" width="30"> Menu
+</a><br>
+<hr size="10">
 </body>
 </html>
