--- a/index.html
+++ b/index.html
@@ -1,125 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum</title>
-    </head>
+    <title>Mi Página</title>
+</head>
+<body>
+    <center>
+        <hr size="20" noshade color="blue">
 <body bgcolor="Pink">
-    <hr size="10">
-    <center><img src="Yop.jpg" alt="imagen" height="190" width="140"></center>
-    <hr size="10">
-    <h1 id="localSEO">Hoja de vida </h1>
-    <h1 id="menu">Menu</h1>
-    <br>
-    <a href="#persona">
-        <img src="persona.jpg" alt="imagen" height="80" width="80"> Datos personales 
-    </a> <br>
-    <a href="#estudio">
-        <img src="estudios.jpg" alt="imagen" height="80" width="80"> Estudios
-    </a> <br>
-    <a href="#labor">
-        <img src="labores.jpg" alt="imagen" height="80" width="80"> Labores
-    </a> <br>
-    <a href="#otros">
-        <img src="otros.jpg" alt="imagen" height="80" width="80"> Otros
-    </a> <br>
-    <a href="#referencias">
-        <img src="referencias.jpg" alt="imagen" height="80" width="80"> Referencias
-    </a> <br>
-    <hr size="10">
-    <a id="persona">
-        <h1>Datos personales</h1>
-    </a>
-    <b><i>Nombre:</i></b>
-    Helen Esmeralda <br>
-    <b><i>Apellido:</i></b>
-    Carrillo López <br>
-    <b><i>Grado:</i></b>
-    5to bachillerato en ciencias y letras con orientacion en computacion<br>
-    <b><i>Nacionalidad</i></b>
-    Guatemalteca <br>
-    <b><i>Fecha de Naciemiento</i></b>
-    26 de Enero del 2008 <br>
-    <b><i>Correo Electronico</i></b>
-    helencarrillo6636@gmail.com <br>
-    <a href="#menu">
-    <img src="menu.jpg"alt="imagen" height="30" width="30"> Menu
-</a> <br>
-<hr size="10">
-<a id="estudio">
-    <h1>Estudios</h1>
-</a>
-<b><i><font color="purple"> Prepa:</font></i></b>
-Escuela Oficial Rural Mixta J.M Linda Vista <br>
-<b><i><font color="purple"> Primaria:</font></i></b>
-Colegio GuateAmala Linda Vista <br>
-<b><i><font color="purple"> Basicos:</font></i></b>
-Colegio Liceo Lideres del Futuro Linda Vista <br>
-<b><i><font color="purple"> Diversificado:</font></i></b>
-Instituto Profesional de computacion Villa Nueva<br>
-<a href="#menu">
-    <img src="menu.jpg"alt="imagen" height="30" width="30"> Menu
-</a> <br>
-<hr size="10">
-<a id="labor">
-    <h1>Datos Laborales</h1>
-</a>
-No he tenido <br>
-<a href="#menu">
-    <img src="menu.jpg"alt="imagen" height="30" width="30"> Menu
-</a><br>
-<hr size="10">
-<a id="otros">
-    <h1>Otros</h1>
-</a>
-<u><b><i><font color="perple"> Cursos:</font></i></b></u>
-<h3><b><i>Cursos:</i></b>
-</h3>
-Marca Personal (Platzi) <br>
-Java Script (curso San Carlos) <br>
-Computo basico (Capacitate para el empleo) <br>
-<a href="#menu">
-    <img src="menu.jpg"alt="imagen" height="30" width="30"> Menu
-</a><br>
-<hr size="10">
-<a id="referencias">
-    <h1> Referencias Personales</h1>
-</a>
-<table border="3">
-    <tr>
-        <th> <b><i><font color="violet"> Monica: </font></i></b> <br>
-            Para mi eres muy inteligente por<br>
-            que le entiendes a cosas que yo <br>
-            no le entiendo y eres muy dulce.
-        <th> <b><i><font color="violet"> Mariana: </font></i></b> <br>
-        Lo que pienso de<br>
-        usted es que usted <br>
-        es una persona amable,<br>
-        divertida, carismática y <br>
-        inteligente es una persona<br>
-        que sabe pensar en las peores<br>
-        ocasiones y siempre tener un <br>
-        lado positivo de las cosas es <br>
-        amable y soñadora.
-        <th> <b><i><font color="violet"> Esther: </font></i></b> <br> 
-        Es una persona inteligente,<br>
-        acomedida, solidaria, leal,<br>
-        activa, honesta
-        <th> <b><i><font color="violet"> Ashley: </font></i></b> <br>
-            Que eres una persona muy <br>
-            inteligente y brillante
-    </tr>
-    <tr>
-        <td><img src="Monica.jpg" heigth = "150" width = "200" /></td>
-        <td><img src="Mariana.jpg" heigth = "80" width = "100" /></td>
-         <td><img src="Esther.jpg" heigth = "200" width = "230" /></td>
-        <td><img src="Ashley.jpg" heigth = "230" width = "260" /></td>
-    </tr>
-</table>
-<a href="#menu">
-    <img src="menu.jpg"alt="imagen" height="30" width="30"> Menu
-</a><br>
-<hr size="10">
+<center><img src="Yop.jpg" alt="imagen" height="190" width="140"></center>
+ <font size="34" face="tahoma" color="purple">
+<h2> Helen Carrillo </font> <h2>
+<a href="Persona.html">Datos Personales</a>
+<a href="Estudios.html">Datos Escolares</a>
+<a href="Labor.html">Datos Laborales</a>
+<a href="Otros.html">Otros</a>
+<a href="Referencias.html">Referencias Personales</a><br>
+<hr size="10" Color="blue" noshade>
+</center>
 </body>
 </html>
