--- a/Persona.html
+++ b/Persona.html
@@ -5,7 +5,8 @@
 </style>
 </head>
 <body>
-  <img src="Yop.jpg" alt="imagen" height="190" width="140">
+  <center>
+  <img src="Yop.jpg" alt="imagen" height="190" width="140"></center>
 <hr color="write" size="10" aling="center"
 <font face="arial" size="15" color="black">
 <u> <i> Datos Personales </i> </u> <br>
