--- a/Persona.html
+++ b/Persona.html
@@ -9,10 +9,10 @@
   <img src="Yop.jpg" alt="imagen" height="190" width="140"></center>
 <hr color="write" size="10" aling="center"
 <font face="arial" size="15" color="black">
-  <fon size="10">
+  <font size="20">
 <u> <i> Datos Personales </i> </u> <br>
 <b><i> Nombre: </i></b> Helen Esmeralda Carrillo Lopez <br>
 <b><i> Correo Electronico: </i></b> helencarrillo.6636@gmail.com<br>
 <b><i> Grado: </i></b> 5to Bachillerato en Ciencias y Letras con orientacion en Computacion<br>
 <b><i> Fecha de Nacimiento: </i></b> 26 de Enero del 2008 <br>
-  </fon>
+  </font>
