--- a/Persona.html
+++ b/Persona.html
@@ -16,3 +16,5 @@
 <b><i> Grado: </i></b> 5to Bachillerato en Ciencias y Letras con orientacion en Computacion<br>
 <b><i> Fecha de Nacimiento: </i></b> 26 de Enero del 2008 <br>
   </font>
+<a href="index.html" target="_blank">Return</a>
+</html>
