--- a/Persona.html
+++ b/Persona.html
@@ -1,8 +1,31 @@
 <html>
 <head>
 <title> Datos Personales </title>
-<style> background-repeat: no-repeat; background-size: cover; </head>
-</style>
+<style> 
+        body {
+            background-image: url('fondo.jpg'); /* Ruta de la imagen de fondo */
+            background-size: cover; /* La imagen cubre toda la pantalla */
+            background-position: center; /* Centra la imagen */
+        }
+        #menu {
+            margin-top: 20px;
+        }
+        h1, h2 {
+            color: magenta;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 3px solid black;
+        }
+        th, td {
+            padding: 10px;
+            text-align: center;
+        }
+  </body>
+  </style>
 </head>
 <body>
   <center>
