--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <center>
-        <hr size="20" noshade color="#98FB98">
+        <hr size="20" noshade color="#D8BFD8">
 <body bgcolor="Pink">
 <center><img src="Yop.jpg" alt="imagen" height="190" width="140"></center>
  <font size="34" face="tahoma" color="purple">
@@ -14,7 +14,7 @@
 <a href="Labor.html">Datos Laborales</a>
 <a href="Otros.html">Otros</a>
 <a href="Referencias.html">Referencias Personales</a><br>
-<hr size="10" Color="#98FB98" noshade>
+<hr size="10" Color="#D8BFD8" noshade>
 </center>
 </body>
 </html>
