--- a/index.html
+++ b/index.html
@@ -2,10 +2,35 @@
 <head>
     <title>Mi Página</title>
 </head>
+    <style>
+        
+        body {
+            background-image: url('fondo.jpg'); /* Ruta de la imagen de fondo */
+            background-size: cover; /* La imagen cubre toda la pantalla */
+            background-position: center; /* Centra la imagen */
+        }
+        #menu {
+            margin-top: 20px;
+        }
+        h1, h2 {
+            color: magenta;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 3px solid black;
+        }
+        th, td {
+            padding: 10px;
+            text-align: center;
+        }
+    </body>
+    </style>
 <body>
     <center>
         <hr size="20" noshade color="#D8BFD8">
-<body bgcolor="Pink">
 <center><img src="Yop.jpg" alt="imagen" height="190" width="140"></center>
  <font size="34" face="tahoma" color="purple">
 <h2> Helen Carrillo </font> <h2>
