--- a/Estudios.html
+++ b/Estudios.html
@@ -6,9 +6,11 @@
 <hr color="#FFC1CC" size="10" aling="center">
 <font face="Arial" size"15" color="Purple">
 <u><i> Formacion Academica </i></u>
+<font size="15"
     <p><font color="magenta">Preparatoria:</font> Escuela oficial rural de párvulos Linda Vista J.M</p>
     <p><font color="magenta">Primaria:</font> Colegio GuateAmala</p>
     <p><font color="magenta">Básicos:</font> Colegio Liceo Líderes del Futuro</p>
     <p><font color="magenta">Diversificado:</font> Instituto Profesional de Computación</p>
+</font>
 <a href="index.html" target="_blank">Return</a>
 </html>
