--- a/Estudios.html
+++ b/Estudios.html
@@ -4,9 +4,9 @@
 </head>
 <body>
 <hr color="#FFC1CC" size="10" aling="center">
-<font face="Arial" size"15" color="Purple">
+<font face="Arial" size="15" color="Purple">
 <font size="15" <u><i> Formacion Academica </i></u></font><br>
-<font size="8">
+<font size="5">
     <p><font color="magenta">Preparatoria:</font> Escuela oficial rural de párvulos Linda Vista J.M</p>
     <p><font color="magenta">Primaria:</font> Colegio GuateAmala</p>
     <p><font color="magenta">Básicos:</font> Colegio Liceo Líderes del Futuro</p>
