--- a/Labor.html
+++ b/Labor.html
@@ -7,7 +7,7 @@
 <font face="Arial" size="15" color="Purple">
 <font size="15" <u><i> Datos Laborales </i></u></font><br>
 <font size="5">
-    <p><font color="magenta"> No tengo:</font> Marca Personal</p>
+    <p><font color="magenta"> No tengo</font></p>
 </font>
 <a href="index.html" target="_blank">Return</a>
 </html>
