--- a/Estudios.html
+++ b/Estudios.html
@@ -12,5 +12,6 @@
     <p><font color="magenta">Básicos:</font> Colegio Liceo Líderes del Futuro</p>
     <p><font color="magenta">Diversificado:</font> Instituto Profesional de Computación</p>
 </font>
+    <hr color="#FFC1CC" size="10" aling="center">
 <a href="index.html" target="_blank">Return</a>
 </html>
