--- a/Labor.html
+++ b/Labor.html
@@ -8,6 +8,7 @@
 <font size="15" <u><i> Datos Laborales </i></u></font><br>
 <font size="5">
     <p><font color="magenta"> No tengo</font></p>
+    <hr color="#FFC1CC" size="10" aling="center">
 </font>
 <a href="index.html" target="_blank">Return</a>
 </html>
