--- a/Persona.html
+++ b/Persona.html
@@ -3,7 +3,7 @@
 <title> Datos Personales </title>
 </head>
   <hr color="#FFC1CC" size="10" aling="center">
-<font face="Arial" size="15" color="Purple">
+<font face="Arial" size="15" color="Purple"> </font>
   <font size="20">
 <u> <i> Datos Personales </i> </u> </font> <br>
 <b><i> Nombre: </i></b> Helen Esmeralda Carrillo Lopez <br>
