--- a/Otros.html
+++ b/Otros.html
@@ -11,5 +11,6 @@
     <p><font color="magenta">Capacitate para el empleo:</font> Computo basico </p>
     <p><font color="magenta">Cursos Libres USAC:</font> JavaScript</p>
 </font>
+    <hr color="#FFC1CC" size="10" aling="center">
 <a href="index.html" target="_blank">Return</a>
 </html>
