--- a/Referencias.html
+++ b/Referencias.html
@@ -38,6 +38,7 @@
         </tr>
     </table>
 <font>
+        <hr color="#FFC1CC" size="10" aling="center">
 <a href="index.html" target="_blank">Return</a>
 </body>
 </html>
