--- a/Estudios.html
+++ b/Estudios.html
@@ -2,6 +2,7 @@
 <head>
 <title> Datos Academicos </title>
 </head>
+    <body bgcolor="#F2A2E8">
 <body>
 <hr color="#FFC1CC" size="10" aling="center">
 <font face="Arial" size="15" color="Purple">
