--- a/Persona.html
+++ b/Persona.html
@@ -2,7 +2,7 @@
 <head>
 <title> Datos Personales </title>
 </head>
-  <body bgcolor="#FFDAB9">
+  <body bgcolor="#DCB1C8">
   <hr color="#FFC1CC" size="10" aling="center">
 <font face="Arial" size="15" color="Purple"> </font>
   <font size="20">
