--- a/Estudios.html
+++ b/Estudios.html
@@ -2,7 +2,7 @@
 <head>
 <title> Datos Academicos </title>
 </head>
-    <body bgcolor="#EED9C4">
+    <body bgcolor="#ECE2E1">
 <body>
 <hr color="#FFC1CC" size="10" aling="center">
 <font face="Arial" size="15" color="Purple">
