--- a/Persona.html
+++ b/Persona.html
@@ -3,7 +3,7 @@
 <title> Datos Personales </title>
 </head>
   <body bgcolor="#DCB1C8">
-  <hr color="#FFC1CC" size="10" aling="center">
+  <hr color="#esmeraldgreen" size="10" aling="center">
 <font face="Arial" size="15" color="Purple"> </font>
   <font size="20">
 <u> <i> Datos Personales </i> </u> </font> <br>
