--- a/Otros.html
+++ b/Otros.html
@@ -3,7 +3,7 @@
 <title> Cursos </title>
 </head>
 <body>
-<hr color="#FFC1CC" size="10" aling="center">
+<hr color="Punch" size="10" aling="center">
 <font face="Arial" size="15" color="Purple">
 <font size="15" <u><i> Otros </i></u></font><br>
 <font size="5">
