--- a/Labor.html
+++ b/Labor.html
@@ -2,7 +2,7 @@
 <head>
 <title> Datos Laborales </title>
 </head>
-    <body bgcolor="mediumpurple">
+    <body bgcolor="#ECE2E1">
 <body>
 <hr color="#FFC1CC" size="10" aling="center">
 <font face="Arial" size="15" color="Purple">
