--- a/Otros.html
+++ b/Otros.html
@@ -2,7 +2,7 @@
 <head>
 <title> Cursos </title>
 </head>
-<body>
+<body bigcolor="#ECE2E1">
 <hr color="Punch" size="10" aling="center">
 <font face="Arial" size="15" color="Purple">
 <font size="15" <u><i> Otros </i></u></font><br>
@@ -13,4 +13,5 @@
 </font>
     <hr color="#FFC1CC" size="10" aling="center">
 <a href="index.html" target="_blank">Return</a>
+    </body>
 </html>
