--- a/Otros.html
+++ b/Otros.html
@@ -2,7 +2,7 @@
 <head>
 <title> Cursos </title>
 </head>
-<body bigcolor="#ECE2E1">
+<body bgcolor="#ECE2E1">
 <hr color="Punch" size="10" aling="center">
 <font face="Arial" size="15" color="Purple">
 <font size="15" <u><i> Otros </i></u></font><br>
