--- a/Referencias.html
+++ b/Referencias.html
@@ -2,7 +2,7 @@
 <head>
 <title> Referencias </title>
 </head>
-<body>
+<body bgcolor="#ECE2E1">
 <hr color="#FFC1CC" size="10" aling="center">
 <font face="Arial" size="15" color="Purple">
 <font size="15" <u><i> Referencias Personales </i></u></font><br>
