--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         
         body {
-            background-image: url('Fonfo2.jpg'); /* Ruta de la imagen de fondo */
+            background-image: url('Fondo2.jpg'); /* Ruta de la imagen de fondo */
             background-size: cover; /* La imagen cubre toda la pantalla */
             background-position: center; /* Centra la imagen */
         }
