--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <hr size="20" noshade color="#D8BFD8">
 <center><img src="Yop.jpg" alt="imagen" height="190" width="140"></center>
  <font size="34" face="tahoma" color="purple">
-<h2> Helen Carrillo </font> <h2>
+<h2> Helen Carrillo </font> <h2> <br>
+    <br>
 <a href="Persona.html">Datos Personales</a>
 <a href="Estudios.html">Datos Escolares</a>
 <a href="Labor.html">Datos Laborales</a>
