Update and rename index.html to Helen.html

--- a/Helen.html
+++ b/Helen.html
@@ -5,9 +5,9 @@
     <style>
         
         body {
-            background-image: url('Fondo2.jpg'); /* Ruta de la imagen de fondo */
-            background-size: cover; /* La imagen cubre toda la pantalla */
-            background-position: center; /* Centra la imagen */
+            background-image: url('Fondo2.jpg');
+            background-size: cover;
+            background-position: center;
         }
         #menu {
             margin-top: 20px;
@@ -35,11 +35,12 @@
  <font size="34" face="tahoma" color="purple">
 <h2> Helen Carrillo </font> <h2> <br>
     <br>
-<a href="Persona.html">Datos Personales</a>
-<a href="Estudios.html">Datos Escolares</a>
-<a href="Labor.html">Datos Laborales</a>
-<a href="Otros.html">Otros</a>
-<a href="Referencias.html">Referencias Personales</a><br>
+<a href="PersonaC.html">Datos Personales</a>
+<a href="EstudiosC.html">Datos Escolares</a>
+<a href="LaborC.html">Datos Laborales</a>
+<a href="OtrosC.html">Otros</a>
+<a href="ReferenciasC.html">Referencias Personales</a><br>
+    <a href="index.html" target="_blank"> --Regresar al menu principal</a><br>
 <hr size="10" Color="#D8BFD8" noshade>
 </center>
 </body>
